NEW279671
Captured video frames are leaked if Web process media player is destroyed before message is received
https://bugs.webkit.org/show_bug.cgi?id=279671
Summary Captured video frames are leaked if Web process media player is destroyed bef...
Kimmo Kinnunen
Reported 2024-09-13 05:37:04 PDT
Captured video frames are leaked if Web process media player is destroyed before message is received
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-13 05:37:15 PDT
Kimmo Kinnunen
Comment 2 2024-09-13 05:55:12 PDT
Note You need to log in before you can comment on or make changes to this bug.