Captured video frames are leaked if Web process media player is destroyed before message is received https://bugs.webkit.org/show_bug.cgi?id=279671 rdar://problem/135948989

Reviewed by NOBODY (OOPS!).

GPU process would put the captured VideoFrame to the video frame heap
and send the reference to the WebContent process media player. If
the MediaPlayerPrivateRemote was destroyed while the message was in transit,
the message would be ignored and the video frame would leak in the
heap.

Make the GPUP -> WCP video frame offer messages asynchronous with
replies. Since asynchronous message replies are always delivered, this
fixes the memory leak. Remove the video frame from the heap if
the frame was not adopted.

This concerns following video frame offer messages:
    Messages::MediaPlayerPriveteRemote::PushVideoFrameMetadata
    Messages::LibWebRTCCodecs::CompletedDecoding
    Messages::RemoteCaptureSampleManager::videoFrameAvailable

* Source/WebKit/GPUProcess/media/RemoteVideoFrameObjectHeap.cpp:
(WebKit::RemoteVideoFrameObjectHeap::addWithCompletion):
(WebKit::RemoteVideoFrameObjectHeap::add):
* Source/WebKit/GPUProcess/media/RemoteVideoFrameObjectHeap.h:
* Source/WebKit/GPUProcess/media/cocoa/RemoteMediaPlayerProxyCocoa.mm:
(WebKit::RemoteMediaPlayerProxy::mediaPlayerOnNewVideoFrameMetadata):
* Source/WebKit/GPUProcess/webrtc/LibWebRTCCodecsProxy.mm:
(WebKit::LibWebRTCCodecsProxy::createDecoderCallback):
* Source/WebKit/UIProcess/Cocoa/UserMediaCaptureManagerProxy.cpp:
* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::videoFrameForCurrentTime):
* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.h:
* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.messages.in:
* Source/WebKit/WebProcess/GPU/media/RemoteVideoFrameProxy.cpp:
(WebKit::RemoteVideoFrameProxy::properties):
(WebKit::RemoteVideoFrameProxy::~RemoteVideoFrameProxy):
(WebKit::releaseRemoteVideoFrameProxy): Deleted.
(WebKit::RemoteVideoFrameProxy::releaseUnused): Deleted.
* Source/WebKit/WebProcess/GPU/media/RemoteVideoFrameProxy.h:
* Source/WebKit/WebProcess/GPU/media/RemoteVideoFrameProxyProperties.h:
* Source/WebKit/WebProcess/GPU/media/cocoa/MediaPlayerPrivateRemoteCocoa.mm:
(WebKit::MediaPlayerPrivateRemote::pushVideoFrameMetadata):
* Source/WebKit/WebProcess/GPU/webrtc/LibWebRTCCodecs.cpp:
(WebKit::LibWebRTCCodecs::completedDecoding):
* Source/WebKit/WebProcess/GPU/webrtc/LibWebRTCCodecs.h:
* Source/WebKit/WebProcess/GPU/webrtc/LibWebRTCCodecs.messages.in:
* Source/WebKit/WebProcess/cocoa/RemoteCaptureSampleManager.cpp:
(WebKit::RemoteCaptureSampleManager::videoFrameAvailable):
* Source/WebKit/WebProcess/cocoa/RemoteCaptureSampleManager.h:
* Source/WebKit/WebProcess/cocoa/RemoteCaptureSampleManager.messages.in: